VIH-8618 alignment fix for video-slash icon

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participants-panel/participants-panel.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/participants-panel/participants-panel.component.scss
@@ -42,7 +42,7 @@
   font-family: 'GDS Transport', arial, sans-serif;
   color: govuk-colour('white');
   display: grid;
-  grid-template-columns: auto 30px 30px 30px 30px 30px;
+  grid-template-columns: auto 25px 25px 25px 25px 25px 25px;
   > div {
     padding-top: 15px;
     padding-bottom: 15px;
